--- a/Develop/package.json
+++ b/Develop/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node index.js"
+    "run": "node index.js"
   },
   "author": "",
   "license": "ISC",
